--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -9,10 +9,14 @@
     "dev": "npm run build && npm run start"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.3",
     "ws": "^8.18.1"
   },
   "devDependencies": {
-     "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@repo/common": "workspace:*",
     "@types/ws": "^8.18.1"
   },
   "keywords": [],
